# PCP-TCC

./: .gitignore  README.md  dados_csv.csv  main.py  pyproject.toml
src/dados/: gerar_previsao.py
src/database/: db_utils.py
src/gui/: barra_lateral.py  graficos.py  main_window.py  tab_mme.py  tab_mms.py  tabela.py  tabs.py
src/leitura_e_escrita/: ler_arquivo.py  salvar_arquivo.py
